[package]
name = "bytebarrage"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo@nullable.se>"]
# cargo-features = ["always-optimize-deps"]
# always-optimize-deps = true

[dependencies]
blake2 = "0.7.0"
digest = "0.7.2"
typenum = "1.9"
generic-array = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10.3"
rmp-serde = "0.13.7"
bytes = "0.4"
futures = "0.1"
tokio-io = "0.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
pnet_datalink = "0.20.0"
net2 = "0.2.31"
